--- a/work/third/index.html
+++ b/work/third/index.html
@@ -25,12 +25,17 @@
     <script src="../../common/js/jquery.js"></script>
     <script>
       // 今回やるのはタブメニューです。
-      // navの小要素であるliをクリックして、contents内の小要素であるli要素を表示させる。
+      // navの小要素であるliをクリックして、contents内の小要素であるli要素を表示させる。      
       // .index() 要素のindexを取得します。
       // .eq() 引数に応じたindexの要素を指定します。
       // .addClass() クラスを追加します。
       // .removeClass() クラスを削除します。
-    </script>
+      $('.nav').find('li').click(function() {
+        var num = $(this).index();
+        $('.contents').find('li').addClass('is-hidden');
+        $('.contents').find('li').eq(num).removeClass();
+      });
+      </script>
   </body>
 </html>
 
