--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -47,15 +47,25 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
-      // 今回やるのはドロップメニューです。
-      // メニューをhoverすると隠れている中のメニューが表示され、メニューから離れると中のメニューが非表示されるプログラムです。
-      // [使用するメソッド]
-      // .hover(関数, 関数) 要素の上にマウスカーソルが乗ると第1引数の関数を実行し、マウスカーソルから離れると第2引数の関数を実行します。
-      // .slideDown() 要素がスライドしながら表示されます。
-      // .slideUp() 要素がスライドしながら非表示されます。
-      // .next() 要素の隣の要素を取得します。これは使わなくてもできます。
-      // .children() 要素の子要素を取得します。
-      // .stop() 現在動作中のアニメーション処理を全て中止します。
+      // $(function() {
+
+        // 今回やるのはドロップメニューです。
+        // メニューをhoverすると隠れている中のメニューが表示され、メニューから離れると中のメニューが非表示されるプログラムです。
+        // [使用するメソッド]
+        // .hover(関数, 関数) 要素の上にマウスカーソルが乗ると第1引数の関数を実行し、マウスカーソルから離れると第2引数の関数を実行します。
+        // .slideDown() 要素がスライドしながら表示されます。
+        // .slideUp() 要素がスライドしながら非表示されます。
+        // .next() 要素の隣の要素を取得します。これは使わなくてもできます。
+        // .children() 要素の子要素を取得します。
+        // .stop() 現在動作中のアニメーション処理を全て中止します。
+        
+        $('.menu__list').children('li').hover(function() {
+          $(this).children('ul').slideDown()
+        }, function() {
+          $(this).children('ul').stop().slideUp();
+        })
+        
+      // });
     </script>
   </body>
 </html>
