--- a/work/third/index.html
+++ b/work/third/index.html
@@ -24,16 +24,20 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
-      // 今回やるのはタブメニューです。
-      // navの小要素であるliをクリックして、contents内の小要素であるli要素を表示させる。      
-      // .index() 要素のindexを取得します。
-      // .eq() 引数に応じたindexの要素を指定します。
-      // .addClass() クラスを追加します。
-      // .removeClass() クラスを削除します。
-      $('.nav').find('li').click(function() {
-        var num = $(this).index();
-        $('.contents').find('li').addClass('is-hidden');
-        $('.contents').find('li').eq(num).removeClass();
+      $(function() {
+
+        // 今回やるのはタブメニューです。
+        // navの小要素であるliをクリックして、contents内の小要素であるli要素を表示させる。      
+        // .index() 要素のindexを取得します。
+        // .eq() 引数に応じたindexの要素を指定します。
+        // .addClass() クラスを追加します。
+        // .removeClass() クラスを削除します。
+        $('.nav').find('li').click(function() {
+          var num = $(this).index();
+          $('.contents').find('li').addClass('is-hidden')
+          .eq(num).removeClass('is-hidden');
+        });
+
       });
       </script>
   </body>
