--- a/work/third/index.html
+++ b/work/third/index.html
@@ -36,6 +36,7 @@
           var num = $(this).index();
           $('.contents').find('li').addClass('is-hidden')
           .eq(num).removeClass('is-hidden');
+          // ホントは消してから出すほうが良い
         });
 
       });
