err:lists__item

--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -99,7 +99,7 @@
         // .data('') DOM要素にあるdata-~を取得できる
         // .change() セレクトボックスの値の変更をキャッチする関数
         // $().each() DOM要素を1つずつループ処理をする（ループ内で$(this)を使うと要素がひとつずつ取得できる）
-        
+        console.log($('.list').children('li'));
         $('.select').change(function() {
           var selectVal = $(this).val();
 
