--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -122,6 +122,11 @@
             },
           }).done(function(data) {
             var items = data.Items;
+            console.log(data);
+            if(data.count === 0) {
+              $('.message').html('検索結果が見つかりませんでした。</br>別のキーワードで検索して下さい。');
+              return false;
+            }
             addListsItem(items);
             addPager(data);
             disabledPager(data);
@@ -135,10 +140,8 @@
           var message = "";
           if(error.status === 429) {
             message ='リクエスト過多です。しばらく時間を置いてからお試しください。'
-          }else if(error.status === 400) {
-            message ='検索結果が見つかりませんでした。</br>別のキーワードで検索して下さい。'
           }else if(error.status === 404) {
-            $message ='検索文字が入力されていません。'
+            message ='検索文字が入力されていません。'
           }else if (error.status === 0){
             message ='通信に失敗しました。インターネットの接続をご確認ください。'
           }
