--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -167,16 +167,16 @@
         
         // pager追加
         function addPager(data) {
-          $('.lists').after(`<div class="pager" data-js="pager"><div class="counter"><span class="counter-current">${data.page}</span>/<span class="counter-all">${data.pageCount}</span></div><div class="btn-wrapper"><a class="btn-item prev-item" data-js="page-prev" href="">前へ</a><a class="btn-item next-item" data-js="page-next" href="">次へ</a></div></div>`)
+          $('.lists').after(`<div class="pager" data-js="pager"><div class="counter"><span class="counter-current">${data.page}</span>/<span class="counter-all">${data.pageCount}</span></div><div class="btn-wrapper"><a class="btn-item" data-js="page-prev" href="">前へ</a><a class="btn-item" data-js="page-next" href="">次へ</a></div></div>`)
         }
 
         // pager非表示
         function disabledPager(data) {
           if(data.page === 1) {
-            $('.prev-item').addClass('disabled')
+            $('[data-js="page-prev"]').addClass('disabled')
           }
           if(data.page === data.pageCount) {
-            $('.next-item').addClass('disabled')
+            $('[data-js="page-next"]').addClass('disabled')
           }
         }
 
