--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -94,50 +94,50 @@
         var searchKeyword = ""
         //検索ボタンをクリック時に発火
         $('[data-js="search-btn"]').click(function() {
-          $('.lists__item').remove();
-          $('.pager').remove();
-          $('.message').empty();
+          resetPage();
           page= 1;
-          getBooksData(inputText());
+          inputText();
+          getBooksData();
         })
         
         //入力したテキストの取得
         function inputText() {
-          return $('[data-js="search-word"]').val();
+          searchKeyword = $('[data-js="search-word"]').val();
         }
     
         // 次のページへ遷移
         $('body').on('click','[data-js="page-next"]', function(e){
+          e.preventDefault();
           if($(this).hasClass('disabled')) {
             return false;
           }else {
-            resetPager(e);
+            resetPage();
             page++;
-            getBooksData(searchKeyword);
+            getBooksData();
           }
         });
 
         // 前のページへ遷移
         $('body').on('click','[data-js="page-prev"]', function(e) {
+          e.preventDefault();
           if($(this).hasClass('disabled')) {
             return false;
           }else {
-            resetPager(e);
+            resetPage();
             page--;
-            getBooksData(searchKeyword);
+            getBooksData();
           }
         });
 
-        // pagerリセット
-        function resetPager(e) {
-          e.preventDefault();
+        // pageリセット
+        function resetPage() {
           $('.lists__item').remove();
           $('.pager').remove();
+          $('.message').empty();
         }
 
         // API叩いてデータ取得
-        function getBooksData(keyword) {
-          searchKeyword = keyword;
+        function getBooksData() {
           $.ajax({
             url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522',
             type: 'GET',
@@ -151,8 +151,8 @@
             },
           }).done(function(data) {
             var items = data.Items;
-            var notData = 0;
-            if(data.count === notData) {
+            var NOTDATA = 0;
+            if(data.count === NOTDATA) {
               $('.message').html('検索結果が見つかりませんでした。</br>別のキーワードで検索して下さい。');
               return false;
             }
@@ -223,8 +223,8 @@
 
         // pager非表示
         function addClassDisabled(data) {
-          var minPage = 1
-          if(data.page === minPage) {
+          var MINPAGE = 1
+          if(data.page === MINPAGE) {
             $('[data-js="page-prev"]').addClass('disabled');
           }
           if(data.page === data.pageCount) {
